# boa

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.local.yaml.example  compose.yaml  docker-compose.yml  handoff-engine-room-ui.md  pyproject.toml
.github/workflows/: docker-ghcr.yml
docs/: automation-client.md  bug-wave.md  design.md  email-ack.md  gui-repair-2.1.1.md  index.md  observation-client-ai-prompt.md  release-notes-1.0.md  release-notes-1.5.md  release-notes-1.6.md  release-notes-1.7.md  release-notes-1.8.md  release-notes-2.0.md  release-notes-2.1.md  release-notes-2.2.md  release-plan-2.1.1.md  reminders.md  starlight.md  testing.md
examples/n8n/: README.md
examples/python/: README.md  boa_client.py  submit_observation.py  test_boa_client.py  test_boa_client_self.py
graphify-out/: .graphify_chunks.json  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: static_preflight.py
src/boa/: __init__.py  ack_token.py  api.py  domain.py  email.py  email_templates.py  main.py  qa.py  reminder_config.py  reminder_service.py  storage.py  yaml_io.py
src/boa/static/: ack.html  app-board.css  app-core.css  app-dialog-journey.css  app-dialog-observation.css  app-dialog-shell.css  app-dialog-utility.css  app-dialogs.css  app.css  app.js  index.html  journey-label-layout.js
tests/: test_api.py  test_api_hardening.py  test_email_ack.py  test_email_templates.py  test_journey_label_layout.py  test_playwright_e2e.py  test_playwright_secret_validation.py  test_reminders.py  test_smtp.py  test_static_preflight.py  test_yaml_io.py
