[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "boa"
version = "0.1.0"
description = "A timeline-centric release health dashboard."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Boa Contributors" },
]
keywords = ["release", "timeline", "dashboard", "yaml", "sqlite"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.115.0",
  "PyYAML>=6.0.2",
  "python-multipart>=0.0.20",
  "uvicorn>=0.32.0",
]

[project.urls]
Homepage = "https://github.com/chengenzo/boa"
Repository = "https://github.com/chengenzo/boa"

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "playwright>=1.60.0",
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
